[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Fonts/NormalTextFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Utilities/OptionsPanel.gd" type="Script" id=2]

[node name="OptionsPanel" type="MarginContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 402.0
margin_bottom = 161.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 355.0
margin_bottom = 114.0
custom_constants/vseparation = 10
custom_constants/hseparation = 5
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FontSize" type="Label" parent="GridContainer"]
margin_right = 110.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "Font Size"
align = 1

[node name="FontSlider" type="HSlider" parent="GridContainer"]
margin_left = 115.0
margin_right = 315.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 24.0
max_value = 64.0
step = 2.0
value = 32.0
rounded = true

[node name="Volume" type="Label" parent="GridContainer"]
margin_top = 42.0
margin_right = 110.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "Volume"
align = 1

[node name="VolumeSlider" type="HSlider" parent="GridContainer"]
margin_left = 115.0
margin_top = 42.0
margin_right = 315.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 50.0
step = 2.0
value = 50.0

[connection signal="value_changed" from="GridContainer/FontSlider" to="." method="_on_FontSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
